Finalize events API
